--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -11,46 +11,79 @@
    },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_16932\\4254267155.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mseaborn\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0msns\u001B[0m \u001B[1;31m# data visualization\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      8\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 9\u001B[1;33m \u001B[1;32mimport\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     10\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnn\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mnn\u001B[0m \u001B[1;31m# deep learning framework\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     11\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnn\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfunctional\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mF\u001B[0m   \u001B[1;31m# deep learning framework\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'torch'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Data\n",
+      "                     Open  High   Low  Close\n",
+      "Datetime                                    \n",
+      "2019-11-02 11:00:00  6.47  6.59  6.46   6.56\n",
+      "2019-11-02 12:00:00  6.57  6.61  6.55   6.56\n",
+      "2019-11-02 13:00:00  6.54  6.54  6.54   6.54\n",
+      "2019-11-02 14:00:00  6.54  6.57  6.53   6.57\n",
+      "2019-11-02 15:00:00  6.57  6.58  6.52   6.56\n",
+      "Original Price Data:\n",
+      "[[6.47 6.59 6.46 6.56]\n",
+      " [6.57 6.61 6.55 6.56]\n",
+      " [6.54 6.54 6.54 6.54]\n",
+      " [6.54 6.57 6.53 6.57]\n",
+      " [6.57 6.58 6.52 6.56]]\n",
+      "Scaled Price Data:\n",
+      "[[0.12957409 0.1313783  0.13440197 0.13497301]\n",
+      " [0.13557289 0.13255132 0.13995068 0.13497301]\n",
+      " [0.13377325 0.12844575 0.13933416 0.13377325]\n",
+      " [0.13377325 0.13020528 0.13871763 0.13557289]\n",
+      " [0.13557289 0.13079179 0.13810111 0.13497301]]\n"
      ]
     }
    ],
    "source": [
-    "#Using LSTM framework to predict stock return by using the date and hour base open, high, low, close data of the stock\n",
-    "#The data is from 2019-02-11 to 2023-02-22\n",
-    "\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "import numpy as np # linear algebra\n",
-    "import matplotlib.pyplot as plt # data visualization\n",
-    "import seaborn as sns # data visualization\n",
-    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import torch\n",
-    "import torch.nn as nn # deep learning framework\n",
-    "import torch.nn.functional as F   # deep learning framework\n",
-    "import torch.optim as optim # deep learning framework\n",
-    "from torch.utils.data import Dataset, DataLoader, TensorDataset # deep learning framework\n",
-    "from sklearn.preprocessing import MinMaxScaler # data preprocessing\n",
-    "from sklearn.metrics import mean_squared_error # model evaluation\n",
-    "from sklearn.metrics import mean_absolute_error # model evaluation\n",
+    "import torch.nn as nn\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import r2_score\n",
+    "from torch.utils.data import Dataset, DataLoader, TensorDataset\n",
+    "\n",
+    "#Reading the data\n",
+    "akbank_data = pd.read_csv(\"C:\\\\Users\\\\ERALP\\\\OneDrive\\\\Desktop\\\\Software Engineering\\\\SWE599---Financial-Time-Series-Volatility-and-Return-Forecasting\\\\Code\\\\akbank_data.csv\")\n",
+    "\n",
+    "#Selecting the columns that we will use. We will use the Open, High, Low and Close prices to calculate the returns.\n",
+    "\n",
+    "akbank_data = akbank_data[['Date', 'Hour', 'Open', 'High', 'Low', 'Close']]\n",
+    "\n",
+    "#Converting Date and Hour to datetime object and setting it as index. This will help us to plot the data in a time series manner.\n",
+    "\n",
+    "akbank_data['Datetime'] = pd.to_datetime(akbank_data['Date'] + \" \" + akbank_data['Hour'])\n",
+    "\n",
+    "#Dropping Date and Hour columns\n",
+    "akbank_data.set_index('Datetime', inplace=True)\n",
+    "akbank_data.drop(['Date', 'Hour'], axis=1, inplace=True)\n",
     "\n",
     "\n",
-    "#Loading and preprocessing the data\n",
-    "data = pd.read_csv('C:/Users/ERALP/OneDrive/Desktop/SoftwareEngineering/SWE599---Financial-Time-Series-Volatility-and-Return-Forecasting/Code/akbank.csv')\n",
-    "data = data[['Date', 'Hour', 'Open', 'High', 'Low', 'Close']]\n",
+    "#Creating prices variable to store the Open, High, Low and Close prices in a numpy array. The reason for this is that we will use the prices to calculate the returns.\n",
     "\n",
-    "#Combining the date and hour columns to create a datetime column and set it as the index.\n",
-    "data['Datetime'] = pd.to_datetime(data['Date'] + \" \"+ data['Hour'])\n",
-    "data.set_index('Datetime', inplace=True)\n",
-    "data.drop(['Date', 'Hour'], axis=1, inplace=True)\n",
+    "prices = akbank_data[['Open', 'High', 'Low', 'Close']].values\n",
     "\n",
-    "print(data.head())"
+    "# Normalizing the prices between 0 and 1. This will help us to train the model faster. I will be using MinMaxScaler to normalize the prices. Scaling will be between 0 and 1. I am using MinMaxScaler because I would like to keep original distribution of the data and data is not normally distrubuted.\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "scaled_akbank_data = scaler.fit_transform(prices)\n",
+    "\n",
+    "print(\"Original Data\")\n",
+    "print(akbank_data[:5])\n",
+    "\n",
+    "print(\"Original Price Data:\")\n",
+    "print(prices[:5])\n",
+    "\n",
+    "print(\"Scaled Price Data:\")\n",
+    "print(scaled_akbank_data[:5])\n",
+    "\n"
    ]
   },
   {
