LSTM - prepared training and test data sets #2

--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -33,7 +33,60 @@
       " [0.13557289 0.13255132 0.13995068 0.13497301]\n",
       " [0.13377325 0.12844575 0.13933416 0.13377325]\n",
       " [0.13377325 0.13020528 0.13871763 0.13557289]\n",
-      " [0.13557289 0.13079179 0.13810111 0.13497301]]\n"
+      " [0.13557289 0.13079179 0.13810111 0.13497301]]\n",
+      "X shape: [[[0.12957409 0.1313783  0.13440197 0.13497301]\n",
+      "  [0.13557289 0.13255132 0.13995068 0.13497301]\n",
+      "  [0.13377325 0.12844575 0.13933416 0.13377325]\n",
+      "  [0.13377325 0.13020528 0.13871763 0.13557289]\n",
+      "  [0.13557289 0.13079179 0.13810111 0.13497301]\n",
+      "  [0.13497301 0.13196481 0.13933416 0.13677265]\n",
+      "  [0.13677265 0.1313783  0.13686806 0.13437313]\n",
+      "  [0.13437313 0.12903226 0.13995068 0.13437313]\n",
+      "  [0.13557289 0.13020528 0.14118372 0.13557289]\n",
+      "  [0.13557289 0.1313783  0.13748459 0.13257349]\n",
+      "  [0.13257349 0.13079179 0.13748459 0.13557289]\n",
+      "  [0.13557289 0.13020528 0.13440197 0.13017397]\n",
+      "  [0.13077385 0.1255132  0.13625154 0.13077385]\n",
+      "  [0.13077385 0.12727273 0.12946979 0.12477504]\n",
+      "  [0.12477504 0.12434018 0.12946979 0.12717457]\n",
+      "  [0.12777445 0.12258065 0.12885327 0.12477504]\n",
+      "  [0.12477504 0.12140762 0.12762022 0.12537493]\n",
+      "  [0.12537493 0.1202346  0.13070284 0.12537493]\n",
+      "  [0.12837433 0.12316716 0.13378545 0.12837433]\n",
+      "  [0.12897421 0.12434018 0.12823674 0.12477504]\n",
+      "  [0.12477504 0.11964809 0.12515413 0.12057588]\n",
+      "  [0.12057588 0.11612903 0.12330456 0.12057588]\n",
+      "  [0.11937612 0.1143695  0.12453761 0.11937612]\n",
+      "  [0.119976   0.11612903 0.12268804 0.12117576]\n",
+      "  [0.12117576 0.11671554 0.12392109 0.11877624]\n",
+      "  [0.11937612 0.11554252 0.12392109 0.119976  ]\n",
+      "  [0.12057588 0.11612903 0.12022195 0.11577684]\n",
+      "  [0.1139772  0.10909091 0.1189889  0.1139772 ]\n",
+      "  [0.11517696 0.11026393 0.12022195 0.11517696]\n",
+      "  [0.11457708 0.1143695  0.11837238 0.11817636]\n",
+      "  [0.11757648 0.11495601 0.11775586 0.1169766 ]\n",
+      "  [0.1169766  0.11612903 0.12207152 0.12057588]\n",
+      "  [0.12117576 0.11612903 0.12638718 0.12117576]\n",
+      "  [0.12057588 0.11730205 0.12330456 0.12117576]\n",
+      "  [0.12117576 0.11964809 0.12453761 0.12237552]\n",
+      "  [0.12237552 0.1202346  0.12762022 0.12417516]\n",
+      "  [0.12417516 0.12140762 0.12515413 0.12177564]\n",
+      "  [0.12057588 0.11554252 0.12577065 0.12057588]\n",
+      "  [0.12057588 0.11554252 0.12577065 0.12057588]\n",
+      "  [0.12117576 0.11730205 0.12083847 0.11817636]\n",
+      "  [0.11817636 0.11378299 0.12083847 0.1169766 ]\n",
+      "  [0.1169766  0.11260997 0.12083847 0.11757648]\n",
+      "  [0.11757648 0.11260997 0.12268804 0.11757648]\n",
+      "  [0.1169766  0.11554252 0.12145499 0.1169766 ]\n",
+      "  [0.1169766  0.1143695  0.12083847 0.11817636]\n",
+      "  [0.11817636 0.11964809 0.12268804 0.12357528]\n",
+      "  [0.12357528 0.11964809 0.1270037  0.12237552]\n",
+      "  [0.12237552 0.11730205 0.12762022 0.12237552]\n",
+      "  [0.1229754  0.11788856 0.12823674 0.1229754 ]\n",
+      "  [0.1229754  0.11847507 0.12453761 0.119976  ]]]\n",
+      "y shape: [0.12237552 0.12417516 0.12477504 0.12237552 0.1229754 ]\n",
+      "X_train shape: (7950, 50, 4)\n",
+      "y_train shape: (7950,)\n"
      ]
     }
    ],
@@ -75,6 +128,8 @@
     "scaler = MinMaxScaler(feature_range=(0, 1))\n",
     "scaled_akbank_data = scaler.fit_transform(prices)\n",
     "\n",
+    "train_data_length = int(len(scaled_akbank_data) * 0.8)\n",
+    "\n",
     "print(\"Original Data\")\n",
     "print(akbank_data[:5])\n",
     "\n",
@@ -83,7 +138,53 @@
     "\n",
     "print(\"Scaled Price Data:\")\n",
     "print(scaled_akbank_data[:5])\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "# Defining lookback period. This is the number of previous time steps that will be used to predict the next time step. I will be using a week steps to predict the next time step. This means that the model will use the previous 5 days to predict the next day. So as a day has 10 hours of trading, the model will use the previous 50 hours to predict the next hour.\n",
+    "\n",
+    "lookback = 50\n",
+    "\n",
+    "# Creating empty list for input and target data. X will contain the previous 50 hours of data and y will contain the next hour of data.\n",
+    "X , y = [], []\n",
+    "\n",
+    "# Creating input sequences and the corresponding target values for the training data. The model will use the previous 50 hours of data to predict the next hour of data.\n",
+    "# Using for loop to iterate through the scaled_akbank_data starting from the 50th index until the end of data. The reason for this is that we need 50 previous hours to predict the next hour.\n",
+    "# For each iteration I create input sequence by slicing the scaled_akbank_data from i-50 to i and append it to X. I also append the next hour of data to y.\n",
+    "\n",
+    "\n",
+    "for i in range(lookback, len(scaled_akbank_data)):\n",
+    "    X.append(scaled_akbank_data[i - lookback:i, :])\n",
+    "    y.append(scaled_akbank_data[i, -1])\n",
+    "\n",
+    "\n",
+    "# Converting X and y to numpy arrays.\n",
+    "X, y = np.array(X), np.array(y)\n",
+    "\n",
+    "print(\"X shape:\", X[:1])\n",
+    "print(\"y shape:\", y[:5])\n",
+    "\n",
+    "# Splitting the data into training and test sets. I will be using 80% of the data for training and 20% for testing.\n",
+    "# I am using the train_data_length variable that I created earlier to split the data. I am using the train_data_length variable because I want to use the same data for training and testing. This will help us to compare the results of the model.\n",
+    "\n",
+    "X_train, y_train = X[:train_data_length - lookback], y[:train_data_length - lookback]\n",
+    "X_test, y_test = X[train_data_length - lookback:], y[train_data_length - lookback:]\n",
+    "\n",
+    "print(\"X_train shape:\", X_train.shape)\n",
+    "print(\"y_train shape:\", y_train.shape)\n",
+    "\n",
+    "#Converting X_train, y_train, X_test and y_test to torch tensors. This will help us to use the data with PyTorch.\n",
+    "\n",
+    "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.float32)\n",
+    "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.float32)\n",
+    "\n",
+    "\n",
+    "#Creating a TensorDataset and DataLoader for training data. I am using a batch size of 32. This means that the model will use 32 samples to calculate the gradients and update the weights. I am also shuffling the data to prevent the model from overfitting.\n",
+    "\n",
+    "train_dataset = TensorDataset(X_train, y_train)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n"
    ]
   },
   {
