LSTM - Defined LSTM function #2

--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -2,94 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original Data\n",
-      "                     Open  High   Low  Close\n",
-      "Datetime                                    \n",
-      "2019-11-02 11:00:00  6.47  6.59  6.46   6.56\n",
-      "2019-11-02 12:00:00  6.57  6.61  6.55   6.56\n",
-      "2019-11-02 13:00:00  6.54  6.54  6.54   6.54\n",
-      "2019-11-02 14:00:00  6.54  6.57  6.53   6.57\n",
-      "2019-11-02 15:00:00  6.57  6.58  6.52   6.56\n",
-      "Original Price Data:\n",
-      "[[6.47 6.59 6.46 6.56]\n",
-      " [6.57 6.61 6.55 6.56]\n",
-      " [6.54 6.54 6.54 6.54]\n",
-      " [6.54 6.57 6.53 6.57]\n",
-      " [6.57 6.58 6.52 6.56]]\n",
-      "Scaled Price Data:\n",
-      "[[0.12957409 0.1313783  0.13440197 0.13497301]\n",
-      " [0.13557289 0.13255132 0.13995068 0.13497301]\n",
-      " [0.13377325 0.12844575 0.13933416 0.13377325]\n",
-      " [0.13377325 0.13020528 0.13871763 0.13557289]\n",
-      " [0.13557289 0.13079179 0.13810111 0.13497301]]\n",
-      "X shape: [[[0.12957409 0.1313783  0.13440197 0.13497301]\n",
-      "  [0.13557289 0.13255132 0.13995068 0.13497301]\n",
-      "  [0.13377325 0.12844575 0.13933416 0.13377325]\n",
-      "  [0.13377325 0.13020528 0.13871763 0.13557289]\n",
-      "  [0.13557289 0.13079179 0.13810111 0.13497301]\n",
-      "  [0.13497301 0.13196481 0.13933416 0.13677265]\n",
-      "  [0.13677265 0.1313783  0.13686806 0.13437313]\n",
-      "  [0.13437313 0.12903226 0.13995068 0.13437313]\n",
-      "  [0.13557289 0.13020528 0.14118372 0.13557289]\n",
-      "  [0.13557289 0.1313783  0.13748459 0.13257349]\n",
-      "  [0.13257349 0.13079179 0.13748459 0.13557289]\n",
-      "  [0.13557289 0.13020528 0.13440197 0.13017397]\n",
-      "  [0.13077385 0.1255132  0.13625154 0.13077385]\n",
-      "  [0.13077385 0.12727273 0.12946979 0.12477504]\n",
-      "  [0.12477504 0.12434018 0.12946979 0.12717457]\n",
-      "  [0.12777445 0.12258065 0.12885327 0.12477504]\n",
-      "  [0.12477504 0.12140762 0.12762022 0.12537493]\n",
-      "  [0.12537493 0.1202346  0.13070284 0.12537493]\n",
-      "  [0.12837433 0.12316716 0.13378545 0.12837433]\n",
-      "  [0.12897421 0.12434018 0.12823674 0.12477504]\n",
-      "  [0.12477504 0.11964809 0.12515413 0.12057588]\n",
-      "  [0.12057588 0.11612903 0.12330456 0.12057588]\n",
-      "  [0.11937612 0.1143695  0.12453761 0.11937612]\n",
-      "  [0.119976   0.11612903 0.12268804 0.12117576]\n",
-      "  [0.12117576 0.11671554 0.12392109 0.11877624]\n",
-      "  [0.11937612 0.11554252 0.12392109 0.119976  ]\n",
-      "  [0.12057588 0.11612903 0.12022195 0.11577684]\n",
-      "  [0.1139772  0.10909091 0.1189889  0.1139772 ]\n",
-      "  [0.11517696 0.11026393 0.12022195 0.11517696]\n",
-      "  [0.11457708 0.1143695  0.11837238 0.11817636]\n",
-      "  [0.11757648 0.11495601 0.11775586 0.1169766 ]\n",
-      "  [0.1169766  0.11612903 0.12207152 0.12057588]\n",
-      "  [0.12117576 0.11612903 0.12638718 0.12117576]\n",
-      "  [0.12057588 0.11730205 0.12330456 0.12117576]\n",
-      "  [0.12117576 0.11964809 0.12453761 0.12237552]\n",
-      "  [0.12237552 0.1202346  0.12762022 0.12417516]\n",
-      "  [0.12417516 0.12140762 0.12515413 0.12177564]\n",
-      "  [0.12057588 0.11554252 0.12577065 0.12057588]\n",
-      "  [0.12057588 0.11554252 0.12577065 0.12057588]\n",
-      "  [0.12117576 0.11730205 0.12083847 0.11817636]\n",
-      "  [0.11817636 0.11378299 0.12083847 0.1169766 ]\n",
-      "  [0.1169766  0.11260997 0.12083847 0.11757648]\n",
-      "  [0.11757648 0.11260997 0.12268804 0.11757648]\n",
-      "  [0.1169766  0.11554252 0.12145499 0.1169766 ]\n",
-      "  [0.1169766  0.1143695  0.12083847 0.11817636]\n",
-      "  [0.11817636 0.11964809 0.12268804 0.12357528]\n",
-      "  [0.12357528 0.11964809 0.1270037  0.12237552]\n",
-      "  [0.12237552 0.11730205 0.12762022 0.12237552]\n",
-      "  [0.1229754  0.11788856 0.12823674 0.1229754 ]\n",
-      "  [0.1229754  0.11847507 0.12453761 0.119976  ]]]\n",
-      "y shape: [0.12237552 0.12417516 0.12477504 0.12237552 0.1229754 ]\n",
-      "X_train shape: (7950, 50, 4)\n",
-      "y_train shape: (7950,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -184,7 +105,29 @@
     "#Creating a TensorDataset and DataLoader for training data. I am using a batch size of 32. This means that the model will use 32 samples to calculate the gradients and update the weights. I am also shuffling the data to prevent the model from overfitting.\n",
     "\n",
     "train_dataset = TensorDataset(X_train, y_train)\n",
-    "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n"
+    "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "#Defining LSTM the model\n",
+    "\n",
+    "class LSTM(nn.Module): # Inherit from nn.Module\n",
+    "    def __init__(self, input_size, hidden_size, num_layers, output_size):# Constructor\n",
+    "        super(LSTM, self).__init__()\n",
+    "        self.num_layers = num_layers # Number of layers. Will be used in the forward function.\n",
+    "        self.hidden_size = hidden_size # Hidden size. Will be used in the forward function.\n",
+    "        self.lstm = nn.LSTM(input_size, hidden_size, num_layers, batch_first=True) # LSTM layer. batch_first=True means that the input and output will have the batch size as the first dimension. The input shape will be (batch_size, seq_length, input_size)\n",
+    "        self.fc = nn.Linear(hidden_size, output_size) # Fully connected layer. The input size will be the hidden size and the output size will be the number of classes.\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        h0 = torch.zeros(self.num_layers, x.size(0), self.hidden_size) # Creating initial hidden state for the LSTM layer. The shape will be (num_layers, batch_size, hidden_size)\n",
+    "        c0 = torch.zeros(self.num_layers, x.size(0), self.hidden_size) # Creating initial cell state for the LSTM layer. The shape will be (num_layers, batch_size, hidden_size)\n",
+    "\n",
+    "        out, _ = self.lstm(x, (h0, c0)) # Passing the input to the LSTM layer. The output will be of shape (batch_size, seq_length, hidden_size) and the hidden state will be of shape (num_layers, batch_size, hidden_size)\n",
+    "        out = self.fc(out[:, -1, :]) # Passing the last output of the LSTM layer to the fully connected layer. The output will be of shape (batch_size, output_size)\n",
+    "        return out # Returning the output\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
