--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -126,6 +126,18 @@
     "        return out # Returning the output\n",
     "\n",
     "\n",
+    "#Instantiating the model\n",
+    "\n",
+    "input_size= X_train.shape[-1] # Number of features\n",
+    "hidden_size = 64 # Number of features in the hidden state\n",
+    "num_layers = 2 # Number of stacked LSTM layers\n",
+    "output_size = 1 # Number of output features\n",
+    "\n",
+    "model = LSTM(input_size, hidden_size, num_layers, output_size) #\n",
+    "\n",
+    "#Defining the loss function and the optimizer\n",
+    "criterion = nn.MSELoss() # Using Mean Squared Error Loss\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001) # Using Adam optimizer\n",
     "\n",
     "\n"
    ]
