LSTM - Training the Model #2

--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -139,7 +139,22 @@
     "criterion = nn.MSELoss() # Using Mean Squared Error Loss\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001) # Using Adam optimizer\n",
     "\n",
-    "\n"
+    "#Training the model\n",
+    "\n",
+    "num_epochs = 100 # Number of times the model will see the entire dataset\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    for batch_X, batch_y in train_dataloader:\n",
+    "\n",
+    "        output = model(batch_X) # Passing the input to the model\n",
+    "        loss = criterion(output, batch_y.unsqueeze(1)) # Calculating the loss\n",
+    "\n",
+    "        optimizer.zero_grad() # Clearing the gradients of the model parameters\n",
+    "        loss.backward() # Calculating the gradients\n",
+    "        optimizer.step() # Updating the model parameters\n",
+    "\n",
+    "        if (epoch+1) % 10 == 0:\n",
+    "            print(f'Epoch: {epoch+1}/{num_epochs}, Loss: {loss.item():.4f}')\n"
    ]
   },
   {
