--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -20,8 +20,8 @@
     "import torch.nn as nn\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
     "from torch.utils.data import Dataset, DataLoader, TensorDataset\n",
     "\n",
     "#Reading the data\n",
@@ -154,7 +154,19 @@
     "        optimizer.step() # Updating the model parameters\n",
     "\n",
     "        if (epoch+1) % 10 == 0:\n",
-    "            print(f'Epoch: {epoch+1}/{num_epochs}, Loss: {loss.item():.4f}')\n"
+    "            print(f'Epoch: {epoch+1}/{num_epochs}, Loss: {loss.item():.4f}')\n",
+    "\n",
+    "# Making Predictions\n",
+    "\n",
+    "with torch.no_grad(): # Disabling gradient calculation to reduce memory usage and speed up computations\n",
+    "    y_pred = model(X_test) # Passing the input to the model\n",
+    "\n",
+    "# Inverting the scaling for the predicted values\n",
+    "y_pred_rescaled = scaler.inverse_transform(np.hstack((X_test[:,:, :3].numpy().reshape(-1, 3), y_pred.numpy().reshape(-1, 1))))\n",
+    "\n",
+    "# Inverting the scaling for the actual values\n",
+    "y_test_rescaled = scaler.inverse_transform(np.hstack((X_test[:,:, :3].numpy().reshape(-1, 3), y_test.numpy().reshape(-1, 1))))[:, -1]\n",
+    "\n"
    ]
   },
   {
