--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -2,15 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Numpy is not available",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_16572\\3103358614.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m    149\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    150\u001B[0m \u001B[1;31m# Inverting the scaling for the predicted values\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 151\u001B[1;33m \u001B[0my_pred_rescaled\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mscaler\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0minverse_transform\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mhstack\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mX_test\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m:\u001B[0m\u001B[1;36m3\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnumpy\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mreshape\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m3\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my_pred\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnumpy\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mreshape\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    152\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    153\u001B[0m \u001B[1;31m# Inverting the scaling for the actual values\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mRuntimeError\u001B[0m: Numpy is not available"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -51,14 +62,14 @@
     "\n",
     "train_data_length = int(len(scaled_akbank_data) * 0.8)\n",
     "\n",
-    "print(\"Original Data\")\n",
-    "print(akbank_data[:5])\n",
+    "#print(\"Original Data\")\n",
+    "#print(akbank_data[:5])\n",
     "\n",
-    "print(\"Original Price Data:\")\n",
-    "print(prices[:5])\n",
+    "#print(\"Original Price Data:\")\n",
+    "#print(prices[:5])\n",
     "\n",
-    "print(\"Scaled Price Data:\")\n",
-    "print(scaled_akbank_data[:5])\n",
+    "#print(\"Scaled Price Data:\")\n",
+    "#print(scaled_akbank_data[:5])\n",
     "\n",
     "\n",
     "\n",
@@ -82,8 +93,8 @@
     "# Converting X and y to numpy arrays.\n",
     "X, y = np.array(X), np.array(y)\n",
     "\n",
-    "print(\"X shape:\", X[:1])\n",
-    "print(\"y shape:\", y[:5])\n",
+    "#print(\"X shape:\", X[:1])\n",
+    "#print(\"y shape:\", y[:5])\n",
     "\n",
     "# Splitting the data into training and test sets. I will be using 80% of the data for training and 20% for testing.\n",
     "# I am using the train_data_length variable that I created earlier to split the data. I am using the train_data_length variable because I want to use the same data for training and testing. This will help us to compare the results of the model.\n",
@@ -91,8 +102,8 @@
     "X_train, y_train = X[:train_data_length - lookback], y[:train_data_length - lookback]\n",
     "X_test, y_test = X[train_data_length - lookback:], y[train_data_length - lookback:]\n",
     "\n",
-    "print(\"X_train shape:\", X_train.shape)\n",
-    "print(\"y_train shape:\", y_train.shape)\n",
+    "#print(\"X_train shape:\", X_train.shape)\n",
+    "#print(\"y_train shape:\", y_train.shape)\n",
     "\n",
     "#Converting X_train, y_train, X_test and y_test to torch tensors. This will help us to use the data with PyTorch.\n",
     "\n",
@@ -153,8 +164,8 @@
     "        loss.backward() # Calculating the gradients\n",
     "        optimizer.step() # Updating the model parameters\n",
     "\n",
-    "        if (epoch+1) % 10 == 0:\n",
-    "            print(f'Epoch: {epoch+1}/{num_epochs}, Loss: {loss.item():.4f}')\n",
+    "        #if (epoch+1) % 10 == 0:\n",
+    "            #print(f'Epoch: {epoch+1}/{num_epochs}, Loss: {loss.item():.4f}')\n",
     "\n",
     "# Making Predictions\n",
     "\n",
@@ -162,11 +173,29 @@
     "    y_pred = model(X_test) # Passing the input to the model\n",
     "\n",
     "# Inverting the scaling for the predicted values\n",
-    "y_pred_rescaled = scaler.inverse_transform(np.hstack((X_test[:,:, :3].numpy().reshape(-1, 3), y_pred.numpy().reshape(-1, 1))))\n",
+    "y_pred_rescaled = scaler.inverse_transform(np.hstack((X_test[:,:, :3].numpy().reshape(-1, 3), y_pred.numpy().reshape(-1, 1))))[:, -1]\n",
     "\n",
     "# Inverting the scaling for the actual values\n",
     "y_test_rescaled = scaler.inverse_transform(np.hstack((X_test[:,:, :3].numpy().reshape(-1, 3), y_test.numpy().reshape(-1, 1))))[:, -1]\n",
-    "\n"
+    "\n",
+    "#Evaluating model performance\n",
+    "\n",
+    "mse = mean_squared_error(y_test_rescaled, y_pred_rescaled)\n",
+    "mae = mean_absolute_error(y_test_rescaled, y_pred_rescaled)\n",
+    "\n",
+    "print(f\"Mean Squared Error: {mse:.2f}\")\n",
+    "print(f\"Mean Absolute Error: {mae:.2f}\")\n",
+    "\n",
+    "#Plotting the results\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(y_test_rescaled, color='red', label='Real AKBNK Stock Price')\n",
+    "plt.plot(y_pred_rescaled, color='blue', label='Predicted AKBNK Stock Price')\n",
+    "plt.title('AKBNK Stock Price Prediction')\n",
+    "plt.xlabel('Hours')\n",
+    "plt.ylabel('AKBNK Stock Price')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
