CNN - CNN model has been defined #3

--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -2,15 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([7960, 50, 4])\n",
+      "torch.Size([1990, 50, 4])\n",
+      "torch.Size([7960])\n",
+      "torch.Size([1990])\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -60,7 +70,47 @@
     "X_train = torch.tensor(X_train).float()\n",
     "X_test = torch.tensor(X_test).float()\n",
     "y_train = torch.tensor(y_train).float()\n",
-    "y_test = torch.tensor(y_test).float()\n"
+    "y_test = torch.tensor(y_test).float()\n",
+    "\n",
+    "#Creating the Convolutional Neural Network model class\n",
+    "\n",
+    "class StockPricePredictor(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(StockPricePredictor, self).__init__()\n",
+    "        self.conv1 = nn.Conv1d(in_channels=4, out_channels=32, kernel_size=3)\n",
+    "        self.relu1 = nn.ReLU()\n",
+    "        self.pool1 = nn.MaxPool1d(kernel_size=2)\n",
+    "        self.conv2 = nn.Conv1d(in_channels=32, out_channels=64, kernel_size=3)\n",
+    "        self.relu2 = nn.ReLU()\n",
+    "        self.pool2 = nn.MaxPool1d(kernel_size=2)\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.fc1 = nn.Linear(64 * (time_steps - 4), 50)\n",
+    "        self.relu3 = nn.ReLU()\n",
+    "        self.fc2 = nn.Linear(50, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x=self.pool1(self.relu1(self.conv1(x)))\n",
+    "        x=self.pool2(self.relu2(self.conv2(x)))\n",
+    "        x=self.flatten(x)\n",
+    "        x=self.relu3(self.fc1(x))\n",
+    "        x=self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "#Creating the model object\n",
+    "model = StockPricePredictor()\n",
+    "\n",
+    "#Defining the loss function and optimizer\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "#Data loader\n",
+    "\n",
+    "train_dataset = torch.utils.data.TensorDataset(X_train, y_train)\n",
+    "test_dataset = torch.utils.data.TensorDataset(X_test, y_test)\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=1, shuffle=False)\n",
+    "\n"
    ]
   },
   {
