--- a/comparing.ipynb
+++ b/comparing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,12 +14,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Date      Hour  Open  High   Low  Close\n",
-      "0  12/2/2019   9:00:00  6.57  6.57  6.57   6.57\n",
-      "1  12/2/2019  10:00:00  6.57  6.59  6.51   6.52\n",
-      "2  12/2/2019  11:00:00  6.52  6.58  6.51   6.57\n",
-      "3  12/2/2019  12:00:00  6.57  6.57  6.46   6.48\n",
-      "4  12/2/2019  13:00:00  6.49  6.49  6.49   6.49\n",
       "(9992, 6)\n",
       "              Open         High          Low        Close\n",
       "count  9992.000000  9992.000000  9992.000000  9992.000000\n",
@@ -50,8 +44,7 @@
       "High     0\n",
       "Low      0\n",
       "Close    0\n",
-      "dtype: int64\n",
-      "Index(['Date', 'Hour', 'Open', 'High', 'Low', 'Close'], dtype='object')\n"
+      "dtype: int64\n"
      ]
     }
    ],
@@ -70,17 +63,17 @@
     "\n",
     "akbank_data = pd.read_csv(\"C:\\\\Users\\\\ERALP\\\\OneDrive\\\\Desktop\\\\Software Engineering\\\\SWE599---Financial-Time-Series-Volatility-and-Return-Forecasting\\\\Code\\\\akbank_data.csv\")\n",
     "\n",
-    "print(akbank_data.head())\n",
+    "\n",
     "print(akbank_data.shape)\n",
     "print(akbank_data.describe())\n",
     "print(akbank_data.info())\n",
-    "print(akbank_data.isnull().sum())\n",
-    "print(akbank_data.columns)\n"
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -116,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [],
    "metadata": {
